fix: scrollbar bug

--- a/apps/next/src/styles/globals.css
+++ b/apps/next/src/styles/globals.css
@@ -16,7 +16,7 @@
   }
 
   .customScrollBar::-webkit-scrollbar-thumb {
-    @apply bg-neutral-200 dark:bg-neutral-900;
+    @apply bg-neutral-200 dark:bg-neutral-700;
   }
 }
 
@@ -34,26 +34,4 @@ input::-webkit-inner-spin-button {
 
 input[type="number"] {
   -moz-appearance: textfield;
-}
-
-/* Emoji picker styling */
-em-emoji-picker {
-  --background-rgb: 23, 23, 23;
-  --border-radius: 0;
-  --category-icon-size: 24px;
-
-  --color-border-over: #737373;
-  --color-border: rgb(64, 64, 64);
-
-  --em-rgb-input: #262626;
-
-  --font-size: 20px;
-  --rgb-accent: 132, 204, 22;
-  --rgb-background: 23, 23, 23;
-  --rgb-color: 250, 250, 250;
-  --rgb-input: 64, 64, 64;
-
-  height: 50vh;
-  min-height: 400px;
-  max-height: 800px;
 }
